<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/shoppinglist_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/shoppinglist_btn" />
    
        <Button
            android:id="@+id/recipe_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/recept_btn" />

        <Button
            android:id="@+id/ingredients_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingredients_btn" />

        <Button
            android:id="@+id/scan_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan_btn" />

        <Button
            android:id="@+id/statistics_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/statistics_btn" />

        <Button
            android:id="@+id/settings_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_btn" />

</LinearLayout>